2012-01-30  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* configure.ac: Make sure that MPI libraries are listed at the end
	of the command line in AC_CHECK_FUNCS.

2011-03-04  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* configure.ac: Support for Cray XE6.

2010-07-28  Mikael Djurfeldt  <mdj@djurfeldt.com>

	* Release 1.0.7

2009-10-25  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* Release 1.0.6

2009-10-24  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* Release 1.0.5

2009-10-13  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* configure.ac: Support for MPICH 2 (Thanks to Eilif Müller.)

2009-04-01  Mikael Djurfeldt  <djurfeldt@nada.kth.se>

	* Release 1.0.4

2009-03-13  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* Release 1.0.3

2009-03-12  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* Release 1.0.2

2009-03-11  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* configure.ac: Added AM_MAINTAINER_MODE.

2009-03-09  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* Makefile.am (debian-source): Copy manual source into debian
	source tree.

2009-03-08  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* Release 1.0.1

	* configure.ac (CXXFLAGS): Added -pedantic -Wall -Wno-long-long.

2009-03-07  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* configure.ac: Renamed package to incf-music (since people in the
	Debian community has complained about the too generic package
	name).

2009-03-06  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* Makefile.am (EXTRA_DIST): Added debian subdirectory to
	distribution.

2009-03-03  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* Release 1.0

2009-02-11  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* mpidep: New directory for MPI dependent code.

	* configure.ac: Generate mpidep/Makefile.

	* configure.ac: Test if ompi_comm_free exists instead of
	ompi_comm_create which doesn't exist in OpenMPI 1.3.

	* configure.ac: Pass variables to be substituted one-by-one to
	AC_SUBST.

2008-11-03  Mikael Djurfeldt  <mikael@djurfeldt.com>
