@@ -1,0 +1,5 @@
+2012-03-15  Mikael Djurfeldt  <mikael@djurfeldt.com>
+
+	* music.py: New file.
+
+
