@@ -1,3 +1,7 @@
+2012-03-15  Mikael Djurfeldt  <mikael@djurfeldt.com>
+
+	* music: New directory. Python interface for configuring MUSIC.
+
 2012-01-30  Mikael Djurfeldt  <mikael@djurfeldt.com>
 
 	* configure.ac: Make sure that MPI libraries are listed at the end
